# Single-Slope

./: README.md
Data/: Input 0V, AZ (3-ph), 16.66 SPS, 252MHz PLL clock.csv  Input 0V, AZ (In-0V), 25 SPS, 252MHz PLL clock (v0.3 circuit).csv  Input 0V, AZ (In-0V), 25 SPS, 252MHz PLL clock (v0.4 circuit).csv  Input 0V, AZ (In-0V), 25 SPS, 252MHz PLL clock.csv  Input 0V, AZ (In-0V), 25 SPS, 30k samples.csv  Input 0V, AZ (In-0V), 25 SPS, 30k samples.nsd  Input 0V, AZ (In-0V), 5 SPS, 196MHz PLL clock.csv  Input 0V, AZ (In-0V), 5 SPS, 252MHz PLL clock.csv  Input 0V, AZ (In-0V), 5 SPS, 48MHz PLL clock.csv  Input 0V, AZ (In-0V), 5 SPS, 48MHz USB clock.csv  Input 7V, AZ (In-0V), 25 SPS, 30k samples.csv  Input 7V, AZ (In-0V), 25 SPS, 30k samples.nsd
Firmware/Single-Slope-ADC/: CMakeLists.txt  main.c  measurement.pio
SW/: CMakeLists.txt  main.cpp  output.pio  upload.bat
SW/lib/: i2c_slave.h
Simulation/: Single slope ADC v0.3.asc  Single slope ADC v0.4.asc  Single slope ADC.asc
